--- a/scss/_drupal-bootstrap.scss
+++ b/scss/_drupal-bootstrap.scss
@@ -94,7 +94,6 @@ table {
 }
 
 .align-center {
-    clear: both;
     display: inline;
     text-align: center;
     img {
@@ -105,7 +104,6 @@ table {
 
 figure.align-left {
     float: left;
-    clear: left;
     display: grid;
     width: min-content;
     shape-outside: polygon(0 0, 84% 0, 97% 80%, 97% 100%, 0% 100%) border-box;
@@ -114,7 +112,6 @@ figure.align-left {
 
 figure.align-right {
     float: right;
-    clear: right;
     display: grid;
     width: min-content;
     shape-outside: polygon(16% 0%, 100% 0%, 100% 100%, 0% 100%, -3% 88%) border-box;
